# hr-custom-tor

./: README.md  pyproject.toml
hr_custom_tor/: hooks.py  modules.txt
hr_custom_tor/fixtures/: custom_field.json  employee.json
hr_custom_tor/hr_custom_tor/doctype/tor_attendance_import/: test_tor_attendance_import.py  tor_attendance_import.js  tor_attendance_import.json  tor_attendance_import.py
hr_custom_tor/hr_custom_tor/doctype/tor_attendance_import_item/: tor_attendance_import_item.json  tor_attendance_import_item.py
hr_custom_tor/overrides/: custom_leave_application.py  custom_salary_slip.py
hr_custom_tor/public/js/: leave_application.js
hr_custom_tor/temp/: attendance_inject.py
temp/: attendance_inject.py
