[project]
name = "hr_custom_tor"
authors = [
    { name = "IECMU", email = "iecmu@cmu.com"}
]
description = "Custom HRRM for Tor Drink"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pandas==2.1.1",
    "openpyxl==3.1.2",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
